add or subtract now!

--- a/SwiftFun/Base.lproj/Main.storyboard
+++ b/SwiftFun/Base.lproj/Main.storyboard
@@ -31,17 +31,47 @@
                                     <action selector="buttonTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="0Ek-4Y-nBW"/>
                                 </connections>
                             </button>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="8Pq-c1-eg9">
+                                <rect key="frame" x="137.5" y="264" width="100" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="100" id="329-dE-ZNc"/>
+                                </constraints>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="3D9-Y5-jjI">
+                                <rect key="frame" x="137" y="174" width="100" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="100" id="Vrx-5M-5OH"/>
+                                </constraints>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="c9k-Ou-KdX">
+                                <rect key="frame" x="163" y="112" width="51" height="31"/>
+                            </switch>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="OCL-8i-MS6" firstAttribute="top" secondItem="Px1-Fr-5Zk" secondAttribute="bottom" constant="10" id="32P-7s-f36"/>
+                            <constraint firstItem="8Pq-c1-eg9" firstAttribute="top" secondItem="3D9-Y5-jjI" secondAttribute="bottom" constant="60" id="KvO-30-RPi"/>
+                            <constraint firstItem="Px1-Fr-5Zk" firstAttribute="top" secondItem="8Pq-c1-eg9" secondAttribute="bottom" constant="29" id="O0e-jf-z5b"/>
                             <constraint firstItem="OCL-8i-MS6" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="dDa-If-8kD"/>
+                            <constraint firstItem="3D9-Y5-jjI" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="gsm-JG-uYf"/>
+                            <constraint firstItem="3D9-Y5-jjI" firstAttribute="top" secondItem="c9k-Ou-KdX" secondAttribute="bottom" constant="31" id="nyy-ox-Dzt"/>
                             <constraint firstItem="Px1-Fr-5Zk" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="qHw-Mi-lfL"/>
+                            <constraint firstItem="c9k-Ou-KdX" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="rRl-xN-skU"/>
                             <constraint firstItem="Px1-Fr-5Zk" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="sUF-40-0ck"/>
+                            <constraint firstItem="8Pq-c1-eg9" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="sjg-l7-y6G"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <connections>
+                        <outlet property="AdditionSwitch" destination="c9k-Ou-KdX" id="sW6-jy-PNV"/>
+                        <outlet property="BottomTextField" destination="8Pq-c1-eg9" id="b67-du-tS1"/>
+                        <outlet property="TopTextField" destination="3D9-Y5-jjI" id="CN6-SC-ivr"/>
                         <outlet property="myLabel" destination="Px1-Fr-5Zk" id="y8I-eH-6xK"/>
                     </connections>
                 </viewController>
